<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#f5f5f5"
        android:paddingTop="10dp"
        android:paddingLeft="25dp"
        android:paddingRight="30dp"
        android:gravity="center_vertical"
        android:paddingBottom="10dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/bluetooth_bg" />

        <TextView
            android:layout_marginLeft="50dp"
            android:id="@+id/statusText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/connect_status_uncon"
            android:textSize="17sp" />
    </LinearLayout>
    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:divider="@null"
        android:dividerHeight="0px"
        />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical">
            <Button
                android:id="@+id/deviceUpdate"
                android:layout_marginBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_update"
                android:visibility="visible" />

            <Button
                android:id="@+id/deviceSync"
                android:layout_marginBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sync_button"
                android:visibility="gone" />

            <Button
                android:id="@+id/scanBut"
                android:layout_marginBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/scan_button" />

            <Button
                android:id="@+id/disconnectBut"
                android:layout_marginBottom="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/uncon_device_button"
                android:visibility="gone" />
    </LinearLayout>
</LinearLayout>