<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >
    <ImageView
        android:layout_marginBottom="80dp"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        app:srcCompat="@drawable/nav_logo" />
    <TextView
        android:layout_marginTop="45dp"
        android:text="@string/navi_text_1"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="11sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="15dp"
        android:text="@string/navi_text_2"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@android:color/black"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="15dp"
        android:text="@string/navi_text_3"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
